Fixed alignment issues

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,7 +1,7 @@
 .product-card {
   display: flex;
   flex-direction: column;
-  width: 23rem;
+  width: 24rem;
   height: auto;
 
   &__image {
