--- a/src/pages/Products.scss
+++ b/src/pages/Products.scss
@@ -25,8 +25,10 @@
   }
   &__searchbar {
     background-color: var(--clr-accent-light);
+    border-radius: 0.2rem;
     margin-bottom: 1rem;
-    padding: 0.2rem;
+    padding: 0.4rem;
+    font-size: 1rem;
     height: 2rem;
     width: 12rem;
     border: none;
@@ -46,6 +48,14 @@
     color: var(--clr-text-dark);
     margin-bottom: 0.2rem;
     cursor: pointer;
+
+    &:hover {
+      color: var(--clr-accent-dark);
+    }
+
+    &--active {
+      color: var(--clr-accent-dark);
+    }
   }
 
   &__price-slider {
